--- a/css/main.css
+++ b/css/main.css
@@ -28,16 +28,18 @@ nav, ul{
 [rel="external"] {
   background-color: #2694d8;
 }
-ol: first-child{
+ol:first-child{
   color: #719e47
 }
-ol: last-child{
+ol:last-child{
   color: #2aa198
 }
 .types:nth-child(odd){
   background-color: #657ba3
 }
 .types:nth-child(even){
-  background-color: 586e75;
+  background-color: #586e75;
 }
-.types:
+.types:nth-child(3n){
+  background-color: #d04b16;
+}
