--- a/css/main.css
+++ b/css/main.css
@@ -23,19 +23,21 @@ nav, ul{
 .def + strong {
   color: #fff;
 }
-
+[href] {
+  background-color: #719e07;
+}
 
 [rel="external"] {
   background-color: #2694d8;
 }
 ol:first-child{
-  color: #719e47
+  color: #719e47;
 }
 ol:last-child{
-  color: #2aa198
+  color: #2aa198;
 }
 .types:nth-child(odd){
-  background-color: #657ba3
+  background-color: #657ba3;
 }
 .types:nth-child(even){
   background-color: #586e75;
