--- a/css/main.css
+++ b/css/main.css
@@ -1,47 +1,46 @@
-html{
+ html{
   box-sizing: border-box;
   background-color: #fdf6e3;
 }
-header, footer{
+ header, footer{
   font-size: 1.5rem;
 }
-nav, ul{
+ nav, ul{
   font-family: sans-serif;
 }
-.logo{
+ .logo{
   text-transform: uppercase;
 }
-.wrapper{
+ .wrapper{
   background-color: #eee8d5;
 }
-#contents, #favs, #facts, #types{
+ #contents, #favs, #facts, #types{
   color: #93a1a1;
 }
-.wrapper > .def{
+ .wrapper > .def{
   background-color: #b58900;
 }
-.def + strong {
+ .def + strong {
   color: #fff;
 }
-[href*] {
+ a:not(.no-highlight){
   background-color: #719e07;
 }
-
-[rel="external"] {
+ [rel="external"] {
   background-color: #2694d8;
 }
-ol:first-child{
+ ol:first-child{
   color: #719e47;
 }
-ol:last-child{
+ ol:last-child{
   color: #2aa198;
 }
-.types>li:nth-child(odd){
+ .types>li:nth-child(odd){
   background-color: #657ba3;
 }
-.types>li:nth-child(even){
+ .types>li:nth-child(even){
   background-color: #586e75;
 }
-.types>li:nth-child(3n){
+ .types>li:nth-child(3n){
   background-color: #d04b16;
 }
